--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
    <head>
-    <title>DM324 - Home Page</title>
+    <title> Home Page</title>
     <link rel="stylesheet" type="text/css" href="style.css">
    </head>
    
