--- a/student list.html
+++ b/student list.html
@@ -33,13 +33,25 @@
             <td>20184818</td>
              <td>omar</td>
              <td>FCIT</td>
-             <td><img src="images/man.png" alt="usericon" width="30px" heifgt="30px"></td>
+             <td><img src="images/icon.png" alt="usericon" width="30px" heifgt="30px"></td>
+           </tr>
+        <tr>
+            <td>20184531</td>
+             <td>Amr</td>
+             <td>FCIT</td>
+             <td><img src="images/icon.png" alt="usericon" width="30px" heifgt="30px"></td>
+           </tr>
+        <tr>
+            <td>20184567</td>
+             <td>Ahmad</td>
+             <td>FCIT</td>
+             <td><img src="images/icon.png" alt="usericon" width="30px" heifgt="30px"></td>
            </tr>
          <tr>
           <td>20184987</td>
            <td>mohamed</td>
            <td>Pharmacy</td>
-           <td><img src="images/man.png" alt="usericon" width="30px" heifgt="30px"></td>
+           <td><img src="images/icon.png" alt="usericon" width="30px" heifgt="30px"></td>
          </tr>
      </tbody>
      <tfoot>
